write down some todos

--- a/choice_experiment/ComprehensionPage.html
+++ b/choice_experiment/ComprehensionPage.html
@@ -5,6 +5,15 @@
 Did you understand everything?
 {{ endblock }}
 {{ block content }}
+<p>
+    TODOS
+
+<ul>
+    <li>Comprehension simple choice --> Probabilities</li>
+    <li>Let them play with the interactive list</li>
+
+</ul>
+</p>
 
 
 {{ formfields }}
