--- a/choice_experiment/InstructionsPage.html
+++ b/choice_experiment/InstructionsPage.html
@@ -6,6 +6,13 @@ What your are going to do
 {{ endblock }}
 {{ block content }}
 
+<p>TODOS
+
+<ul>
+    <li>Explain first choice type (including Pictures?)</li>
+    <li>Explain second choice type (let them try?)</li>
+</ul>
+</p>
 
 {{ formfields }}
 {{ next_button }}
