--- a/choice_experiment/WelcomePage.html
+++ b/choice_experiment/WelcomePage.html
@@ -6,6 +6,15 @@ Welcome to the experiment!
 {{ endblock }}
 {{ block content }}
 
+<p>
+    TODOS:
+<ul>
+    <li>Privacy</li>
+    <li>ProlificID</li>
+    <li>Epected Payments</li>
+    <li>Duration of the study</li>
+</ul>
+</p>
 
 {{ formfields }}
 {{ next_button }}
