--- a/choice_experiment/WelcomePage.html
+++ b/choice_experiment/WelcomePage.html
@@ -6,13 +6,33 @@ Welcome to the experiment!
 {{ endblock }}
 {{ block content }}
 
+
+<p>
+    Dear participant,
+    <br><br>
+    we want to thank you for answering our questions in this study. Your answers are essential for our ability to
+    produce great research. Because of this it is extremely important that you take the time to read through all
+    instructions carefully and do your best in answering our questions accurately and honestly.
+    <br><br>
+    During this experiment you can win a significant bonus payment (between $0 and $20). This payment is determined by a
+    combination of your
+    choices and luck.
+    <br><br>
+    You can expect to spend roughly 30 minutes on these tasks although this can vary somewhat depending on how quickly
+    you move on on each screen. There is however no hard time-limit for how long you may take overall.
+    <br><br>
+    Sincerely,
+    <br>
+    the Experimenters
+
+
+</p>
+
 <p>
     TODOS:
 <ul>
     <li>Privacy</li>
     <li>ProlificID</li>
-    <li>Epected Payments</li>
-    <li>Duration of the study</li>
 </ul>
 </p>
 
