implement skipping logic for comprehension questions and round logic for main questions

--- a/choice_experiment/ComprehensionPage.html
+++ b/choice_experiment/ComprehensionPage.html
@@ -6,15 +6,9 @@ Did you understand everything?
 {{ endblock }}
 {{ block content }}
 <p>
-    TODOS
-
-<ul>
-    <li>Comprehension simple choice --> Probabilities</li>
-    <li>Let them play with the interactive list</li>
-
-</ul>
+    Before we continue to the actual choices we have some questions to make sure our instructions were sufficiently
+    clear.
 </p>
-
 
 {{ formfields }}
 {{ next_button }}
