make question data easier to read

--- a/choice_experiment/BinaryChoiceSimplePage.html
+++ b/choice_experiment/BinaryChoiceSimplePage.html
@@ -25,12 +25,12 @@ A simple choice?
         <tbody>
             <tr>
                 <td style="width: 50%;" class="text-center align-middle">
-                    With probability <strong>{{prob_up}}%</strong>: Get <strong>${{win_up}}</strong>
+                    With probability <strong>{{prob_up}}%</strong>: Get <strong>${{pay_up}}</strong>
                     <br>
-                    With probability <strong>{{prob_down}}%</strong>: Get <strong>${{win_down}}</strong>
+                    With probability <strong>{{prob_down}}%</strong>: Get <strong>${{pay_down}}</strong>
                 </td>
                 <td style="width: 50%;" class="text-center align-middle">
-                    Get <strong>${{certain_pay}}</strong> for certain (100%)
+                    Get <strong>${{pay_certain}}</strong> for certain (100%)
 
 
                 </td>
