--- a/choice_experiment/BinaryChoiceListPage.html
+++ b/choice_experiment/BinaryChoiceListPage.html
@@ -27,7 +27,7 @@ A bit trickier
         render() {
             return (
                 <div>
-                    <ChoiceList prob_up={js_vars.prob_up} win_up={js_vars.win_up} win_down={js_vars.win_down} initialListItems={js_vars.lables_choice_list.length} listLabels={js_vars.lables_choice_list} />
+                    <ChoiceList prob_up={js_vars.prob_up} pay_up={js_vars.pay_up} pay_down={js_vars.pay_down} initialListItems={js_vars.lables_choice_list.length} listLabels={js_vars.lables_choice_list} />
                 </div>
             )
         }
