--- a/choice_experiment/InstructionsPage.html
+++ b/choice_experiment/InstructionsPage.html
@@ -92,7 +92,7 @@ What your are going to do
             render() {
                 return (
                     <div>
-                        <ChoiceList prob_up={50} win_up={15} win_down={3} initialListItems={5} listLabels={[1, 2, 3, 4, 5]} />
+                        <ChoiceList prob_up={50} pay_up={15} pay_down={3} initialListItems={5} listLabels={[1, 2, 3, 4, 5]} />
                     </div>
                 )
             }
