implement basic explained payoff

--- a/choice_experiment/BinaryChoiceSimplePage.html
+++ b/choice_experiment/BinaryChoiceSimplePage.html
@@ -23,7 +23,7 @@ A simple choice?
         render() {
             return (
                 <div>
-                    <ChoiceSimple prob_up={js_vars.prob_up} prob_down={js_vars.prob_down} pay_up={js_vars.pay_up} pay_down={js_vars.pay_down} pay_certain={js_vars.pay_certain} />
+                    <ChoiceSimple prob_up={js_vars.prob_up} pay_up={js_vars.pay_up} pay_down={js_vars.pay_down} pay_certain={js_vars.pay_certain} />
                 </div>
             )
         }
