--- a/choice_experiment/InstructionsPage.html
+++ b/choice_experiment/InstructionsPage.html
@@ -39,7 +39,7 @@ What your are going to do
                         present two options, one offering a high bonus and one offering a low bonus:
 
                         </p>
-                    <p class="text-center">
+                    <p className="text-center">
                         With probability <strong>45%:</strong> Get <strong>$19</strong> <br></br>
                             With probability <strong>55%:</strong> Get <strong>$6</strong>
                     </p>
@@ -52,7 +52,7 @@ What your are going to do
                         The first three choices you make will present the certain options similarly to the lotteries and your choice will
                         look like this:
                         </p>
-                    <ChoiceSimple prob_up={50} prob_down={50} pay_up={15} pay_down={3} pay_certain={7} />
+                    <ChoiceSimple prob_up={50} pay_up={15} pay_down={3} pay_certain={7} />
                     <p>
                         In these rounds, you will simply be asked which of the two options you prefer.
                         </p>
