--- a/choice_experiment/InstructionsPage.html
+++ b/choice_experiment/InstructionsPage.html
@@ -64,7 +64,7 @@ What your are going to do
                             The list below is not connected to any of your choices. Feel free to play around with it to get a feeling for
                             the way it works.
                         </p>
-                    <ChoiceList prob_up={50} pay_up={15} pay_down={3} initialListItems={5} listLabels={[1, 2, 3, 4, 5]} />
+                    <ChoiceList prob_up={50} pay_up={15} pay_down={3} initialListItems={5} listLabels={[1, 2, 3, 4, 5]} deactivated={false} />
                 </div>
             )
         }
