--- a/choice_experiment/PayoffPage.html
+++ b/choice_experiment/PayoffPage.html
@@ -39,7 +39,7 @@ What you won
                 options = <ChoiceSimple prob_up={js_vars.prob_up} pay_up={js_vars.pay_up} pay_down={js_vars.pay_down}
                     pay_certain={js_vars.pay_certain} />
             } else {
-                options = <ChoiceList prob_up={js_vars.prob_up} pay_up={js_vars.pay_up} pay_down={js_vars.pay_down} initialListItems={js_vars.lables_choice_list.length} listLabels={js_vars.lables_choice_list} />
+                options = <ChoiceList prob_up={js_vars.prob_up} pay_up={js_vars.pay_up} pay_down={js_vars.pay_down} initialListItems={js_vars.lables_choice_list.length} listLabels={js_vars.lables_choice_list} deactivated={true} />
             }
             return (
                 <div>
