--- a/choice_experiment/BinaryChoiceSimplePage.html
+++ b/choice_experiment/BinaryChoiceSimplePage.html
@@ -23,6 +23,9 @@ A simple choice?
         render() {
             return (
                 <div>
+                    <p>
+                        Please tell us which of the two options below you prefer.
+                        </p>
                     <ChoiceSimple prob_up={js_vars.prob_up} pay_up={js_vars.pay_up} pay_down={js_vars.pay_down} pay_certain={js_vars.pay_certain} />
                 </div>
             )
