--- a/choice_experiment/PayoffPage.html
+++ b/choice_experiment/PayoffPage.html
@@ -27,8 +27,15 @@ What you won
     {{chosen_text}}
 </p>
 <p>
-    Therefore, your payoff is {{player.payoff|to0}}
+    Therefore, your bonus is {{player.payoff|to0}}
 </p>
+<p>
+    Thank you once again for participating.
+</p>
+<div class="alert alert-secondary">
+    <strong>Notes:</strong><br>
+    This is also where we would redirect the participant to the completion URL of Prolific or provide completion codes.
+</div>
 
 
 <script type="text/babel">
