--- a/choice_experiment/WelcomePage.html
+++ b/choice_experiment/WelcomePage.html
@@ -11,12 +11,12 @@ Welcome to the experiment!
     Dear participant,
     <br><br>
     we want to thank you for answering our questions in this study. Your answers are essential for our ability to
-    produce great research. Because of this it is extremely important that you take the time to read through all
+    produce great research and it is extremely important that you take the time to read through all
     instructions carefully and do your best in answering our questions accurately and honestly.
     <br><br>
-    During this experiment you can win a significant bonus payment (between $0 and $20). This payment is determined by a
-    combination of your
-    choices and luck.
+    During this experiment you can win a significant bonus (up to $20). This bonus is determined by a
+    combination of your choices and the random resolution of risks. This will be explained in more detail on the next
+    screen.
     <br><br>
     You can expect to spend roughly 30 minutes on these tasks although this can vary somewhat depending on how quickly
     you move on on each screen. There is however no hard time-limit for how long you may take overall.
@@ -27,14 +27,12 @@ Welcome to the experiment!
 
 
 </p>
+<div class="alert alert-secondary">
+    <strong>Notes:</strong> <br>
+    Usually, I would also aks for ProlificIDs on this screen as well as provide some explanation about privacy issues
+    and show contact data.
+</div>
 
-<p>
-    TODOS:
-<ul>
-    <li>Privacy</li>
-    <li>ProlificID</li>
-</ul>
-</p>
 
 {{ formfields }}
 {{ next_button }}
