--- a/choice_experiment/InstructionsPage.html
+++ b/choice_experiment/InstructionsPage.html
@@ -45,7 +45,7 @@ What your are going to do
         </li>
         <ul>
             <li>
-                You chose the lottery option A:
+                You chose the lottery Option A:
             </li>
             <ul>
                 <li>
@@ -56,7 +56,7 @@ What your are going to do
                 </li>
             </ul>
             <li>
-                You chose the certain option B, and you receive the certain bonus.
+                You chose the certain Option B, and you receive the certain bonus.
             </li>
         </ul>
 
@@ -65,8 +65,8 @@ What your are going to do
         </li>
         <ul>
             <li>
-                The random amount "offered" is not among those for which you indicated you would take option B. &rArr;
-                You receive option A:
+                The random amount "offered" is not among those for which you indicated you would take Option B. &rArr;
+                You receive Option A:
             </li>
             <ul>
                 <li>
@@ -77,8 +77,8 @@ What your are going to do
                 </li>
             </ul>
             <li>
-                The random amount "offered" is among those for which you indicated you would take option B. &rArr; You
-                receive option B and receive the certain bonus.
+                The random amount "offered" is among those for which you indicated you would take Option B. &rArr; You
+                receive Option B and receive the certain bonus.
             </li>
         </ul>
     </ul>
@@ -93,8 +93,8 @@ What your are going to do
                 <div>
                     <h3>Types of choices</h3>
                     <p>
-                        During the experiment you will make two types of choices. For each choice you will presented with an option A containing a randomized bonus
-                        and a certain option B and be asked which one you prefer. In the end of the experiment, one
+                        During the experiment you will make two types of choices. For each choice you will presented with an Option A containing a randomized bonus
+                        and a certain Option B and be asked which one you prefer. In the end of the experiment, one
                         of the choices you made will be randomly selected to calculate your bonus. That means any of your choices could determine you bonus and you
                         should think about every single one of them carefully.
                         </p>
@@ -107,11 +107,11 @@ What your are going to do
                             With probability <strong>55%:</strong> Get <strong>$6</strong>
                     </p>
                     <p>
-                        If at the end of the experiment a round is selected to determine your bonus in which you chose the lottery option A,
+                        If at the end of the experiment a round is selected to determine your bonus in which you chose the lottery Option A,
                         this lottery itself is also resolved randomly.
                         </p>
                     <p>
-                        While option A will always look the same, there are two different ways we will present the certain option B.
+                        While Option A will always look the same, there are two different ways we will present the certain Option B.
                         The first three choices you make will present the certain options similarly to the lotteries and your overall choice will
                         look like this:
                         </p>
@@ -120,8 +120,8 @@ What your are going to do
                         In these first three rounds, you will simply be asked which of the two options you prefer.
                         </p>
                     <p>
-                        In the last (4<sup>th</sup>) choice, the option B will be presented as a list. You will then be
-                            asked to indicate for each row whether you prefer the lottery option A on the left or the certain option B on the
+                        In the last (4<sup>th</sup>) choice, the Option B will be presented as a list. You will then be
+                            asked to indicate for each row whether you prefer the lottery Option A on the left or the certain Option B on the
                             right. You indicate your preferences by clicking either on the left button or the right one. The bottom most row
                             gives you instant feedback on how we interpret your inputs.
                             <br></br>
@@ -130,7 +130,7 @@ What your are going to do
                         </p>
                     <ChoiceList prob_up={50} pay_up={15} pay_down={3} initialListItems={5} listLabels={[1, 2, 3, 4, 5]} deactivated={false} />
                     <p>
-                        In the end of the experiment, a random row of option B is selected as our "offer" to you. If you indicated you would take the certain option B for this amount, you receive option B. Otherwise, you receive the lottery option A.
+                        In the end of the experiment, a random row of Option B is selected as our "offer" to you. If you indicated you would take the certain Option B for this amount, you receive Option B. Otherwise, you receive the lottery Option A.
                         </p>
                 </div>
             )
