change global styles

--- a/_templates/global/Page.html
+++ b/_templates/global/Page.html
@@ -4,23 +4,28 @@
 {% block global_styles %}
 <style>
     body {
-        background-color: #ffc107;
+        background-color: #ffeb51b9;
     }
 
     .otree-body {
-        background-color: #ffffff;
+        border: 0.5px solid #74726d7c;
         border-radius: 10px;
+        background-color: #ffffff;
+        margin-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .otree-title {
         padding-top: 2%;
         padding-bottom: 2%;
-        border-bottom: 5px solid #198754;
+        border-bottom: 5px solid #74726D;
     }
 
     .otree-btn-next {
-        background-color: #198754;
-        border-color: #198754;
+        background-color: #74726D;
+        border-color: #74726D;
     }
 </style>
 {% endblock %}
