minor text changes

--- a/choice_experiment/WelcomePage.html
+++ b/choice_experiment/WelcomePage.html
@@ -29,7 +29,7 @@ Welcome to the experiment!
 </p>
 <div class="alert alert-secondary">
     <strong>Notes:</strong> <br>
-    Usually, I would also aks for ProlificIDs on this screen as well as provide some explanation about privacy issues
+    Usually, I would also ask for ProlificIDs on this screen as well as provide some explanation about privacy issues
     and show contact data.
 </div>
 
