--- a/choice_experiment/PayoffPage.html
+++ b/choice_experiment/PayoffPage.html
@@ -29,7 +29,7 @@ What you won
     {{chosen_text}}
 </p>
 <p>
-    Therefore, your bonus is {{player.payoff|to0}}
+    Therefore, your bonus is {{player.payoff|to0}}.
 </p>
 <p>
     Thank you once again for participating.
