--- a/choice_experiment/WelcomePage.html
+++ b/choice_experiment/WelcomePage.html
@@ -8,9 +8,9 @@ Welcome to the experiment!
 
 
 <p>
-    Dear participant,
+    Dear Participant,
     <br><br>
-    we want to thank you for answering our questions in this study. Your answers are essential for our ability to
+    we want to thank you for answering our questions in this experiment. Your answers are essential for us to
     produce great research and it is extremely important that you take the time to read through all
     instructions carefully and do your best in answering our questions accurately and honestly.
     <br><br>
